--- a/fundiin/manifest.json
+++ b/fundiin/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fundiin - Mua Trước Trả Sau",
+  "name": "Fundiin - Mua Trước Trả Sau",
   "icons": [
     {
       "src": "favicon.ico",
